--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://dailypolygoncommunity.github.io/grant",
   "dependencies": {
     "@babel/eslint-parser": "^7.25.9",
     "@testing-library/jest-dom": "^6.6.3",
@@ -15,7 +14,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "babel-loader": "^9.2.1"
+    "babel-loader": "^9.2.1",
+    "gh-pages": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
