Update project files for deployment

--- a/package.json
+++ b/package.json
@@ -40,6 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://dailypolygoncommunity.github.io/grant/"
+  "homepage": "https://dailypolygoncommunity.github.io/pro/"
 }
-
