--- a/Downloads/grant-master/package.json
+++ b/Downloads/grant-master/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://github.com/polydapps/pro"
+  "homepage": "https://dailypolygoncommunity.vercel.app"
 }
